Fix a gap on the input form

--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -34,6 +34,7 @@ input {
   padding: 13px 13px 13px 20px;
   box-sizing: border-box;
   color: #2980b9;
+  border: 3px solid rgba(0, 0, 0, 0);
 }
 
 input:focus {
